# connect-four

./: .gitignore  README.md  async-test.py  main.py  pyproject.toml
src/: __init__.py  config.py  data.py  gym.py  mcts.py  play.py  search.py  train.py  util.py
src/gym/: board.py
src/mcts/: UCT.py  __init__.py  alpha_zero.py  base.py
src/model/: __init__.py  base.py  config.py  conv.py  transformer.py  util.py
src/model/agent/: config.py  model.py
src/model/agents/: __init__.py
